hphp/test/zend/bad/ext/sqlite3/tests/sqlite3_version_noparam.php
<?php

var_dump(SQLite3::version('dummy'));

?>